authentication screen and home screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.16.0
+  firebase_auth: ^4.10.0
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +61,19 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/ayurscan.png
+     - assets/images/plant.jpg
+     - assets/images/plant2.jpg
+     - assets/images/img.jpeg
+     - assets/images/ayur.jpeg
+     - assets/images/sys.jpeg
+     - assets/images/cameraa.jpeg
+     - assets/images/logocam.png
+     - assets/images/gallerylogo.png
+     - assets/images/g.png
+     - assets/images/cam.png
+     - assets/images/camera-2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
