home screen layout done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ flutter:
      - assets/images/MoneyPlant.jpg
      - assets/images/shameplant.jpg
      - assets/images/woodapple.jpg
+     - assets/images/diversity.jpg
+     - assets/images/favourite.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
